fix .env app name and swagger doc
